# pyaxengine

./: .gitignore  .pre-commit-config.yaml  README.md  mypy_check.txt  mypy_errors.txt  pyproject.toml  requirements-dev.txt
.github/workflows/: auto_format_docs.yml  auto_format_python.yml  ci.yml
.sisyphus/: api-baseline.txt
.sisyphus/notepads/pyaxengine-quality-refactor/: progress.md
axengine/: __init__.py  _axclrt.py  _axclrt_capi.py  _axe.py  _axe_capi.py  _base_session.py  _logging.py  _node.py  _providers.py  _session.py  _utils.py  ax_session.py  axcl_session.py  session.py
examples/: classification.py  yolov5.py  yolov5_example.py
script/: README.md  test_axclrt_basic.py  test_axengine_basic.py
tests/: README.md  conftest.py  test_base_session.py  test_characterization.py  test_integration.py  test_logging.py  test_node.py  test_providers.py  test_session.py
